Fixed modal-container's z-index

--- a/capstone-project/ui/src/components/ChatRoom/ChatRoom.css
+++ b/capstone-project/ui/src/components/ChatRoom/ChatRoom.css
@@ -236,4 +236,5 @@ video {
     top: 0;
     left: 0;
     opacity: 1;
+    z-index: 3;
 }
